--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
-    <div class="navbar">
+    <script src="./js/index.js"></script>
+    <div class="main-header">
+      <div class="log">
+        <img style="height: 60px;" src="./assets/logo1.png" alt="logo" />
+      </div>
+      <div>
+        <ul class="first-ul">
+          <li>Home</li>
+          <li>About</li>
+          <li>Blogs</li>
+          <li>Contact</li>
+        </ul>
+      </div>
 
-   <h4>Header</h4>
+   
     </div>
    
 
@@ -43,7 +55,16 @@
       <li>grapes</li>
     </ol>
 
-
+    <!-- JS dom - important -->
+    <button class="btn btn-success" id="myButton">Click me ! for surprise greetings</button>
+    <p class="first-para" id="demo"></p>
+    <script>
+      const sister = document.getElementById("myButton");
+      const demo= document.getElementById("demo")
+      sister.addEventListener("click", function() {
+        demo.textContent = "Good afternoon all!!";
+      })
+    </script>
 
     <!-- this is a heading (h1- h6) -->
     <h1>hello world</h1>
