--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>my project</title>
     <link rel="stylesheet" href="css/style.css" />
 
-     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <!-- bootstdap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstdap@5.0.2/dist/css/bootstdap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
-    <script src="./js/index.js"></script>
+   
 
     <!-- navbar -->
     <div class="main-header">
@@ -27,7 +27,7 @@
         </ul>
       </div>
       <div>
-        <button class="btn btn-success">Get A Quote</button>
+        <button class="btn xyz ram">Get A Quote</button>
       </div>   
     </div>
    
@@ -36,10 +36,38 @@
 
     <h1 class="first-title">hello <br> <span>everyone</span>!! </h1>
     <a href="https://www.youtube.com/" target="_blank"><button class="btn btn-primary">click me to visit youtube</button></a>
-    <h2>hello everyone!!</h2>
+    <marquee><h2>hello everyone!!</h2></marquee>
     <h3>hello everyone!!</h3>
     <h4>hello everyone!!</h4>
     <h6>ddfdfdsfds</h6>
+    <table>
+      <thead>
+        <tr>
+        <td>Name</td>
+        <td>Subject</td>
+        <td>Year</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+        <td>Rames</td>
+        <td>Bsc.csit</td>
+        <td>3rd</td>
+        </tr>
+        <tr>
+        <td>sagar</td>
+        <td>Bsc.csit</td>
+        <td>3rd</td>
+        </tr>
+        
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>total</td>
+          <td>Rs 200</td>
+        </tr>
+      </tfoot>
+    </table>
     <p>
      <a href="./home.html"> <span class="bold-text">Home</span></a> dolor sit amet consectetur, adipisicing elit. Aperiam, qui.<br /> <hr>
       Corporis fugiat cumque praesentium molestias possimus inventore dicta
@@ -62,13 +90,7 @@
     <!-- JS dom - important -->
     <button class="btn btn-success" id="myButton">Click me ! for surprise greetings</button>
     <p class="first-para" id="myPara"></p>
-    <script>
-      const button = document.getElementById("myButton");
-      const demo= document.getElementById("myPara")
-      button.addEventListener("click", function() {
-        demo.textContent = "Good afternoon all!!";
-      })
-    </script>
+  
 
     <!-- this is a heading (h1- h6) -->
     <h1>hello world</h1>
@@ -76,12 +98,13 @@
 
 
 
-<!-- bootstrap -->
+<!-- bootstdap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstdap@5.0.2/dist/js/bootstdap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKtdIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </div>
  <div>
   <h4>Footer</h4>
  </div>
+  <script src="./js/index.js"></script>
   </body>
 </html>
