--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>my project</title>
     <link rel="stylesheet" href="css/style.css" />
 
-     <!-- bootstdap -->
+    <!-- font awesome  -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- font  -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstdap@5.0.2/dist/css/bootstdap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
@@ -16,11 +24,11 @@
     <div class="main-header">
       <div class="logo">
         <img style="height: 60px;" src="./assets/logo2.png" alt="logo Image" />
-        <h>Company Name</h>
+        <h1 class="company-name">Company Name</h1>
       </div>
       <div>
         <ul class="first-ul">
-          <li>Home</li>
+          <li><i class="fa-solid fa-house-chimney"></i> Home</li>
           <li>About</li>
           <li>Blogs</li>
           <li>Contact</li>
@@ -30,6 +38,26 @@
         <button class="btn xyz ram">Get A Quote</button>
       </div>   
     </div>
+    <div class="container">
+      <h4>hello world</h4>
+    </div>
+
+
+    <form>
+        <div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Enter your Name</label>
+  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter your Name">
+</div>
+      <div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Enter your Email</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter your email">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter you message here..."></textarea>
+</div>
+<button class="btn btn-primary">Submit</button>
+    </form>
    
 
     <div class="container">
@@ -95,13 +123,13 @@
     <!-- this is a heading (h1- h6) -->
     <h1>hello world</h1>
     <a href="https://newsapi.org/" target="_blank"><img src="./assets/oranges.jpg" class="hero-image" alt="image" /></a>
-
+</div>
 
 
 <!-- bootstdap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstdap@5.0.2/dist/js/bootstdap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKtdIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</div>
+
  <div>
   <h4>Footer</h4>
  </div>
