--- a/home.html
+++ b/home.html
@@ -4,8 +4,94 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    this is home page!!
+    <!-- navbar -->
+    <div class="main-header">
+      <div class="logo">
+        <img style="height: 60px" src="./assets/logo2.png" alt="logo Image" />
+        <h1 class="company-name">Company Name</h1>
+      </div>
+      <div>
+        <ul class="first-ul">
+          <li><i class="fa-solid fa-house-chimney"></i> Home</li>
+          <li>About</li>
+          <li>Blogs</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div>
+        <button class="btn xyz ram">Get A Quote</button>
+      </div>
+    </div>
+    <div class="container">
+      this is home page!!
+      <hr />
+      <div class="row">
+        <div class="col-md-6">
+          <!-- <div class="dog">
+            <img src="./assets/dog1.jpg" alt="Dog image" />
+          </div> -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4200.905629461543!2d85.31839359742504!3d27.701026384635515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19a9122e5dc3%3A0x3eb124f4579db875!2sKathmandu%20Fun%20Park!5e0!3m2!1sen!2snp!4v1742900930216!5m2!1sen!2snp"
+            width="100%"
+            height="100"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+        <div class="col-md-6">
+          <div class="dog-content">
+            <h4>About Dog</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+              dolorem dicta, dolore harum, ut, numquam officia nihil dolor modi
+              nostrum ex ab ullam vel rerum hic iure exercitationem ipsum
+              itaque!<br />
+              <br />
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit,
+              quod, asperiores odio perferendis fugiat enim natus dolore
+              voluptate, eos ad tenetur eius quis. Facere, nesciunt voluptas
+              placeat a vel facilis?
+              <br />
+              <br />
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit,
+              quod, asperiores odio perferendis fugiat enim natus dolore
+              voluptate, eos ad tenetur eius quis. Facere, nesciunt voluptas
+              placeat a vel facilis?
+            </p>
+            <button class="btn dog-button btn-success">Add to cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
