--- a/home.html
+++ b/home.html
@@ -48,9 +48,9 @@
             <img src="./assets/dog1.jpg" alt="Dog image" />
           </div> -->
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4200.905629461543!2d85.31839359742504!3d27.701026384635515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19a9122e5dc3%3A0x3eb124f4579db875!2sKathmandu%20Fun%20Park!5e0!3m2!1sen!2snp!4v1742900930216!5m2!1sen!2snp"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7066.791091519003!2d85.30869514250523!3d27.67416715480599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19ccc9454ff9%3A0xf196445c0330168a!2sJawalakhel%2C%20Lalitpur%2044600!5e0!3m2!1sen!2snp!4v1742985127630!5m2!1sen!2snp"
             width="100%"
-            height="100"
+            height="450"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
@@ -60,6 +60,44 @@
         <div class="col-md-6">
           <div class="dog-content">
             <h4>About Dog</h4>
+            <div class="card-content">
+              <div class="card card-one" style="width: 18rem">
+                <img
+                  src="./assets/dog1.jpg"
+                  class="card-img-top"
+                  alt="dog image"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+              <div class="card card-one" style="width: 18rem">
+                <img
+                  src="./assets/dog1.jpg"
+                  class="card-img-top"
+                  alt="dog image"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+
+            <button class="btn dog-button btn-success">Add to cart</button>
+            <div class="custom-button-content">
+              <button class="custom-button">Read More</button>
+            </div>
+
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
               dolorem dicta, dolore harum, ut, numquam officia nihil dolor modi
@@ -77,7 +115,6 @@
               voluptate, eos ad tenetur eius quis. Facere, nesciunt voluptas
               placeat a vel facilis?
             </p>
-            <button class="btn dog-button btn-success">Add to cart</button>
           </div>
         </div>
       </div>
