--- a/home.html
+++ b/home.html
@@ -40,14 +40,56 @@
       </div>
     </div>
     <div class="container">
+      <div class="row">
+        <div class="col-md-3 mt-4">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="col-md-3 mt-4">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="col-md-3 mt-4">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="col-md-3 mt-4">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
       this is home page!!
       <hr />
       <div class="row">
         <div class="col-md-6">
-          <!-- <div class="dog">
+          <div class="dog">
             <img src="./assets/dog1.jpg" alt="Dog image" />
-          </div> -->
-          <iframe
+          </div>
+          <!-- <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7066.791091519003!2d85.30869514250523!3d27.67416715480599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19ccc9454ff9%3A0xf196445c0330168a!2sJawalakhel%2C%20Lalitpur%2044600!5e0!3m2!1sen!2snp!4v1742985127630!5m2!1sen!2snp"
             width="100%"
             height="450"
@@ -55,7 +97,7 @@
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+          ></iframe> -->
         </div>
         <div class="col-md-6">
           <div class="dog-content">
@@ -115,6 +157,36 @@
               voluptate, eos ad tenetur eius quis. Facere, nesciunt voluptas
               placeat a vel facilis?
             </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="parent-box">
+            <div class="box1">
+              <h4>Box1</h4>
+            </div>
+            <div class="box2">
+              <h4>Box2</h4>
+            </div>
+            <div class="box3">
+              <h4>Box3</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="three">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h4>hello world</h4>
+          </div>
+          <div class="col-md-6">
+            <h4>hello world</h4>
           </div>
         </div>
       </div>
