bg image from css

--- a/home.html
+++ b/home.html
@@ -162,6 +162,32 @@
       </div>
     </div>
 
+    <div class="one">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <article>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+              dolorem dicta, dolore harum, ut, numquam officia nihil dolor modi
+              nostrum ex ab ullam vel rerum hic iure exercitationem ipsum
+              itaque! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Sit, quod, asperiores odio perferendis fugiat enim natus dolore
+              voluptate, eos ad tenetur eius quis. Facere, nesciunt voluptas
+              placeat a vel facilis? Lorem ipsum dolor, sit amet consectetur
+              adipisicing elit. Sit, quod, asperiores odio perferendis fugiat
+              enim natus dolore voluptate, eos ad tenetur eius quis. Facere,
+              nesciunt voluptas placeat a vel facilis?
+            </article>
+          </div>
+          <div class="col-md-6">
+            <div class="dog">
+              <img src="./assets/dog1.jpg" alt="dog image" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="container">
       <div class="row">
         <div class="col-md-6">
