--- a/home.html
+++ b/home.html
@@ -162,11 +162,24 @@
       </div>
     </div>
 
-    <div class="one">
+    <section class="one">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <article>
+            <h6 class="small-heading">about upex</h6>
+            <h4 class="main-heading">
+              moving and storage <br />
+              service
+            </h4>
+            <p>
+              <b>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Ducimus nostrum repudiandae, ipsam reiciendis hic sequi itaque
+                eveniet nemo veritatis odio eos aut eligendi, sed saepe quae
+                repellat, maiores eius consectetur?
+              </b>
+            </p>
+            <article class="article">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
               dolorem dicta, dolore harum, ut, numquam officia nihil dolor modi
               nostrum ex ab ullam vel rerum hic iure exercitationem ipsum
@@ -178,6 +191,9 @@
               enim natus dolore voluptate, eos ad tenetur eius quis. Facere,
               nesciunt voluptas placeat a vel facilis?
             </article>
+            <div>
+              <i class="fa-regular fa-clock"></i>
+            </div>
           </div>
           <div class="col-md-6">
             <div class="dog">
@@ -186,7 +202,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <div class="container">
       <div class="row">
