--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/about.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,7 +35,9 @@
             <i class="fa fa-bars"></i>
           </a>
         </div>
+        <div class="right-nav-button">
         <button class="quote btn btn-primary">Get a quote</button>
+        </div>
       </div>
     </div>
     
