--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
  <div>
   <h4>Footer</h4>
  </div>
-  <script src="./js/callbacks.js"></script>
+  <script src="./js/localStorage.js"></script>
   </body>
 </html>
